test_integration/extension_executed/tests/assign_rhs/funcExpr.wacc
# function calls are not first-class expressions

# Output:
# #syntax_error#

# Exit:
# 0

# Program:

begin
  int f() is
    return 0 
  end
  int x = f() + f();

  # should output 0
  println x
end

# UPDATE: THIS IS NOW A VALID TEST CASE
